# CSE180

./: lab6setup.sh  map.txt  myMap4.yaml  myMap5.yaml  new_map.txt  newplot.txt  plot.txt  readme.md
Workspace/devel/lib/final/: postprocess_map  preprocess_map
Workspace/devel/lib/husky_base/: husky_node
Workspace/devel/lib/interactive_marker_twist_server/: marker_server
Workspace/devel/lib/lab1/: moverobot
Workspace/devel/lib/lab2/: gotoposition
Workspace/devel/lib/lab3/: transformations
Workspace/devel/lib/lab4/: goto
Workspace/devel/lib/lab5/: gotopoint
Workspace/devel/lib/lab7/: cleanarea
Workspace/devel/lib/lab8/: move
Workspace/devel/lib/lms1xx/: LMS1xx_node
Workspace/devel/lib/pkgconfig/: final.pc  husky_base.pc  husky_bringup.pc  husky_control.pc  husky_description.pc  husky_navigation.pc  husky_viz.pc  lab3.pc  lab7.pc  lab8.pc
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/husky_msgs/: HuskyStatus.h
devel/lib/final/: navigate_map  postprocess_map  scan_map
devel/lib/lab1/: drift
devel/lib/lab3/: transformations
devel/lib/lab5/: tour
devel/lib/lab6/: navigate
devel/lib/lab7/: cleanarea
devel/lib/lab8/: averagepose
devel/lib/pkgconfig/: final.pc  husky_base.pc  husky_bringup.pc  husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_viz.pc  interactive_marker_twist_server.pc  lab1.pc  lab2.pc  lab3.pc  lab4.pc  lab5.pc  lab6.pc  lab7.pc  lab8.pc  lms1xx.pc
devel/share/final/cmake/: finalConfig.cmake
devel/share/husky_base/cmake/: husky_baseConfig.cmake
devel/share/husky_bringup/cmake/: husky_bringupConfig.cmake
devel/share/husky_control/cmake/: husky_controlConfig.cmake
devel/share/husky_description/cmake/: husky_descriptionConfig.cmake
devel/share/husky_gazebo/cmake/: husky_gazeboConfig.cmake
devel/share/husky_msgs/cmake/: husky_msgs-msg-extras.cmake  husky_msgs-msg-paths.cmake  husky_msgsConfig.cmake
devel/share/husky_navigation/cmake/: husky_navigationConfig.cmake
devel/share/husky_viz/cmake/: husky_vizConfig.cmake
devel/share/interactive_marker_twist_server/cmake/: interactive_marker_twist_serverConfig.cmake
devel/share/lab1/cmake/: lab1Config.cmake
devel/share/lab2/cmake/: lab2Config.cmake
devel/share/lab3/cmake/: lab3Config.cmake
devel/share/lab4/cmake/: lab4Config.cmake
devel/share/lab5/cmake/: lab5Config.cmake
devel/share/lab6/cmake/: lab6Config.cmake
devel/share/lab7/cmake/: lab7Config.cmake
devel/share/lab8/cmake/: lab8Config.cmake
devel/share/lms1xx/cmake/: lms1xxConfig.cmake
mapTests/: objectsMove
src/: husky.tgz  huskynew.tgz
src/final/: CMakeLists.txt  final_project.launch  package.xml
src/final/src/: navigate_map.cpp  postprocess_map.cpp  preprocess_map.cpp  scan_map.cpp  transformations.cpp
src/lab1/: CMakeLists.txt  package.xml
src/lab1/src/: #drift.cpp#  #moverobot.cpp#  .#drift.cpp  .#moverobot.cpp  drift.cpp  moverobot.cpp
src/lab2/: CMakeLists.txt
src/lab2/src/: gotoposition.cpp
src/lab3/: CMakeLists.txt
src/lab3/src/: transformations.cpp
src/lab6/: CMakeLists.txt
src/lab6/src/: navigate.cpp
src/lab7/: CMakeLists.txt
src/lab7/src/: cleanarea.cpp
src/lab8/: CMakeLists.txt
src/lab8/src/: averagepose.cpp  move.cpp
(+13 files in other folders)
